--- a/src/assets/projectsJson.json
+++ b/src/assets/projectsJson.json
@@ -31,11 +31,7 @@
     "github": "https://github.com/AstridPrlt/room-homepage",
     "development": ["intégration", "front-end"],
     "goal": "Challenge du site FrontendMentor : réaliser l'intégration web de la page d'accueil d'un site à partir de l'image du rendu visuel et d'un fichier donnant les directives principales sur l'UI",
-    "tools": {
-      "front": ["HTML / CSS", "Javascript"],
-      "back": [],
-      "other": []
-    },
+    "tools": ["HTML / CSS", "Javascript"],
     "objectives": [],
     "functionalities": {
       "users": [],
@@ -58,17 +54,14 @@
     "development": ["full-stack"],
     "goal": "Project libre clôturant ma formation. J'ai décidé de réaliser le site d'un coworking coffee, proposant un accès pour ses membres et l'inscription à des activités. J'en ai profité pour travailler avec deux frameworks : VueJS et Laravel",
     "tools": ["Bootstrap", "VueJS", "Laravel", "MySQL", "API Stripe", "OAuth Login"],
-    "objectives": [],
+    "objectives": [
+      "créer une partie vitrine pour pésenter le café, son fonctionnement et ses évènements",
+      "permettre aux utilisateurs de créer un profil, réserver et payer un évènement, et communiquer avec d'autres membres",
+      "créer un dashboard d'administration pour gérer les évènements et la communauté"
+    ],
     "functionalities": {
-      "users": [
-        "l'inscription et la gestion du profil",
-        "La réservation d’événements gratuits et payants",
-        "l'accès à la communauté"
-      ],
-      "admin": [
-        "la gestion des évènements",
-        "la gestion de la liste des membres"
-      ]
+      "users": [],
+      "admin": []
     },
     "images": {
       "main": "./assets/img/cowee.jpg",
@@ -88,9 +81,9 @@
     "goal": "Créer un site pour un écrivain, lui permettant de rédiger et publier son nouveau roman par épisode.\nIl doit donc être composé d'une interface frontend pour les lecteurs et d'une interface d'administration pour gérer les épisodes",
     "tools": ["Bootstrap", "PHP", "MySQL", "TinyMCE"],
     "objectives": [
-      "- pour les lecteurs : créer une interface pour accéder aux différents épisodes, et pouvoir les commenter",
-      "- pour l'écrivain : créer un dashboard d'administration, protégée par mot de passe, pour gérer ses épisodes via une interface WYSIWYG et modérer les commentaires",
-      "- pour le code : respecter une architecture MVC et la programmation orientée objet"
+      "pour les lecteurs : créer une interface pour accéder aux différents épisodes, et pouvoir les commenter",
+      "pour l'écrivain : créer un dashboard d'administration, protégée par mot de passe, pour gérer ses épisodes via une interface WYSIWYG et modérer les commentaires",
+      "pour le code : respecter une architecture MVC et la programmation orientée objet"
     ],
     "functionalities": {
       "users": [],
@@ -112,7 +105,7 @@
     "url": "https://locvelo-p3.astrid-perillat.fr/",
     "github": "",
     "development": ["front-end"],
-    "goal": "Concevoir une Single Page Application simulant la réservation de vélos dans une ville. La page doit être composée d'un diaporama explicatif et d'une carte intéractive liée à l'API Leaflet (pour la carte) et l'API JCDecaux (pour les vélos)",
+    "goal": "Concevoir une Single Page Application simulant la réservation de vélos dans une ville.\nLa page doit être composée d'un <span>diaporama explicatif</span> et d'une carte intéractive liée à l'API Leaflet (pour la carte) et l'API JCDecaux (pour les vélos)",
     "tools": ["HTML / CSS", "Javascript", "API JCDecaux", "API Leaflet", "API Canvas"],
     "objectives":[
       "créer un slider intéractif pour expliquer le fonctionnement du site",
